# ProyFinalProgra1

./: CMakeLists.txt  main.cpp
DataBase/: conexion.cpp  conexion.h
Juegos/: Ahorcados.cpp  Ahorcados.h  RompeBloques.cpp  RompeBloques.h  Serpiente.cpp  Serpiente.h  TotiToto.cpp  TotiToto.h
Models/: Juego.cpp  Juego.h  Partida.cpp  Partida.h  Usuarios.cpp  Usuarios.h
Pantallas/: Login.cpp  Login.h  Menu.cpp  Menu.h  RegistroUsuario.cpp  RegistroUsuario.h
Services/: JuegosServices.cpp  JuegosServices.h  LOGS.txt  PartidasServices.cpp  PartidasServices.h  UsuarioServices.cpp  UsuarioServices.h
TablasSQLConsultas/: EstrcTablas.sql
Text/: text.cpp  text.h
